--- a/how-to-clean-wooden-utensils.html
+++ b/how-to-clean-wooden-utensils.html
@@ -809,7 +809,7 @@
     <!-- AdSense Footer Banner -->
     <div class="container">
         <div class="ad-banner ad-footer">
-            <img src="https://images.unsplash.com/photo-1556909114-4d0d853e5e25?ixlib=rb-1.2.1&auto=format&fit=crop&w=728&h=90&q=80" alt="Kitchen Tools">
+            <img src="https://drive.google.com/uc?export=view&id=1AN68cpkJwoKLdJW98PQBPpip52FE7rsY" alt="Kitchen Tools">
         </div>
     </div>
 
