--- a/olive-wood-utensils.html
+++ b/olive-wood-utensils.html
@@ -751,7 +751,7 @@
     <!-- AdSense Header Banner -->
     <div class="container">
         <div class="ad-banner ad-header">
-            <img src="https://images.unsplash.com/photo-1556909114-4d0d853e5e25?ixlib=rb-1.2.1&auto=format&fit=crop&w=728&h=90&q=80" alt="Olive Wood Utensils">
+            <img src="https://drive.google.com/uc?export=view&id=1AN68cpkJwoKLdJW98PQBPpip52FE7rsY" alt="Olive Wood Utensils">
         </div>
     </div>
 
