--- a/index.html
+++ b/index.html
@@ -978,7 +978,7 @@
             <aside class="sidebar">
                 <!-- AdSense Sidebar Banner -->
                 <div class="ad-banner ad-sidebar">
-                    <img src="https://images.unsplash.com/photo-1587334984005-84f2274efc8f?ixlib=rb-1.2.1&auto=format&fit=crop&w=160&h=600&q=80" alt="Kitchen Essentials">
+                    <img src="https://drive.google.com/uc?export=view&id=1DKP2t3hi4LFB5MM6cAzTkyk-_Au_xf5S" alt="Kitchen Essentials">
                 </div>
                 
                 <!-- Categories Widget -->
